force-app/main/default/objects/Subject__c/fields/ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovedDate__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>