force-app/main/default/objects/Subject__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prelicense</fullName>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>