force-app/main/default/objects/Subject__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>