force-app/main/default/objects/Subject__c/fields/Biennium__c.field-meta.xml
<CustomField>
    <fullName>Biennium__c</fullName>
    <description>PacPoint-KN09012020-Created for PVL CE and INS Portal</description>
    <label>Biennium</label>
    <length>4</length>
    <type>Text</type>
</CustomField>