force-app/main/default/objects/Subject__c/fields/CreditsForCESubjects__c.field-meta.xml
<CustomField>
    <fullName>CreditsForCESubjects__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Credits for CE Subjects</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>