force-app/main/default/objects/Subject__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>