force-app/main/default/objects/Subject__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>