force-app/main/default/objects/Subject__c/fields/HoursforPreLicenseSubjects__c.field-meta.xml
<CustomField>
    <fullName>HoursforPreLicenseSubjects__c</fullName>
    <description>PacPoint-KN09012020-Created for PVL CE and INS Portal</description>
    <label>Hours for PreLicense Subjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>