force-app/main/default/objects/Subject__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>