force-app/main/default/objects/Subject__c/fields/PrelicenseType__c.field-meta.xml
<CustomField>
    <fullName>PrelicenseType__c</fullName>
    <label>Prelicense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Salesperson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>