force-app/main/default/objects/Subject__c/fields/subjectDisplayName__c.field-meta.xml
<CustomField>
    <fullName>subjectDisplayName__c</fullName>
    <formula>Name + &quot; - &quot;  + SubjectIDFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subject Display Name</label>
    <type>Text</type>
</CustomField>