force-app/main/default/objects/Subject__c/fields/SubjectID__c.field-meta.xml
<CustomField>
    <fullName>SubjectID__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Subject ID Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>