force-app/main/default/objects/Subject__c/fields/SubjectIDAutonum__c.field-meta.xml
<CustomField>
    <fullName>SubjectIDAutonum__c</fullName>
    <displayFormat>S{0000}</displayFormat>
    <label>Subject ID Autonum</label>
    <type>AutoNumber</type>
</CustomField>