force-app/main/default/objects/Subject__c/fields/SubjectIDFormula__c.field-meta.xml
<CustomField>
    <fullName>SubjectIDFormula__c</fullName>
    <formula>IF(

ISBLANK(  ExternalId__c  ) ,
 SubjectIDAutonum__c  ,




IF(

CONTAINS(ExternalId__c,&quot;-&quot;) , 

LEFT(ExternalId__c,Find(&quot;-&quot;, ExternalId__c)-1), 

ExternalId__c

) 


  



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject ID</label>
    <type>Text</type>
</CustomField>