force-app/main/default/objects/Subject__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-FT080920- Created for PVL phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Elective</fullName>
            </value>
            <value>
                <fullName>Prelicense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>