force-app/main/default/objects/Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SubjectIDFormula__c</columns>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Type__c</columns>
    <columns>Medium__c</columns>
    <columns>ApprovedDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Instructor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>