force-app/main/default/objects/Subject__c/listViews/All_CE_Subjects.listView-meta.xml
<ListView>
    <fullName>All_CE_Subjects</fullName>
    <columns>SubjectIDFormula__c</columns>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Medium__c</columns>
    <columns>Instructor__c</columns>
    <columns>ApprovedDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Continuing Education</value>
    </filters>
    <label>CE Subjects</label>
</ListView>